Add DownloadDirectoryTest
Signed-off-by: Dmytro Nochevnov <dnochevnov@codenvy.com>